force-app/main/default/objects/TFN__c/TFN__c.object-meta.xml
<CustomObject>
    <label>TFN</label>
    <nameField>
        <displayFormat>TFN-{0000}</displayFormat>
        <label>TFN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Toll Free Number</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>