force-app/main/default/objects/TFN__c/fields/DNIS__c.field-meta.xml
<CustomField>
    <fullName>DNIS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DNIS</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>