force-app/main/default/objects/TFN__c/fields/Operating_Company__c.field-meta.xml
<CustomField>
    <fullName>Operating_Company__c</fullName>
    <label>Operating Company</label>
    <referenceTo>Operating_Company__c</referenceTo>
    <relationshipLabel>Toll Free Number</relationshipLabel>
    <relationshipName>Toll_Free_Number</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>