force-app/main/default/objects/TFN__c/fields/Toll_Free_Number__c.field-meta.xml
<CustomField>
    <fullName>Toll_Free_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Toll Free Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>